still moving some logic to services and cleaning up the code a bit